--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="pedidos">Pedidos</string>
     <string name="tienda">Tienda</string>
     <string name="clientes">Clientes</string>
-    <string name="clientes_favoritos">♡ Clientes favoritos</string>
+    <string name="clientes_favoritos">Clientes favoritos</string>
     <string name="crear_pedido">Crear pedido...</string>
     <string name="microphone">Microphone</string>
     <string name="edit">Edit</string>
