--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="descripcionpedido" > Pedido para las 12:00 pm de hoy</string>
     <string name="estadopedido" >Estado del pedido</string>
     <string name="pedidos_curso" >Pedidos en curso</string>
+    <string name="info_pedido">Información del Pedido</string>
+    <string name="lista_de_compra">Lista de compra</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
