--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,11 @@
     <string name="pedidos_curso" >Pedidos en curso</string>
     <string name="info_pedido">Información del Pedido</string>
     <string name="lista_de_compra">Lista de compra</string>
+    <string name="start">Start</string>
+    <string name="stop">Stop</string>
+    <string name="play">Play</string>
+    <string name="graba">Graba y escucha el pedido</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
